--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Blog d'un Papa Geek
+title: Blog 
 subtitle:
-description: Blog d'un Papa Geek.
+description: Blog 
 author: iSebmo
 language: fr
 timezone:
