--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "scripts": {
     "build": "gulp --gulpfile  themes/papageek-theme/gulpfile.js && hexo generate",
-    "start": "concurrently \"gulp watch --gulpfile  themes/papageek-theme/gulpfile.js\" \"hexo server\"",
-    "test": "npm version"
+    "start": "concurrently \"gulp watch --gulpfile  themes/papageek-theme/gulpfile.js\" \"hexo server\""
   },
   "dependencies": {
     "hexo": "^3.2.0",
