--- a/_config.yml
+++ b/_config.yml
@@ -52,12 +52,12 @@ tag_map:
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: DD/MM/YYYY
+date_format: D MMMM YYYY
 time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 2
 pagination_dir: page
 
 # Extensions
