--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Blog 
+title: PapaGeek 
 subtitle:
 description: Blog 
 author: iSebmo
 language: fr
 timezone:
+date: 2016-2017
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
