--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: PapaGeek 
+title: tFada 
 subtitle:
 description: Blog 
 author: iSebmo
@@ -13,7 +13,7 @@ date: 2016-2017
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://papageek.top/
+url: https://tfada.fr/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -65,7 +65,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: papageek-theme
+theme: tfada-theme
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
