--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 # Site
 title: tFada 
 subtitle:
-description: Blog 
+description: Blog perso sur l'actualité highTech, la photo, le sport et tout ce qui me tient à coeur de partager sans prise de tête.
 author: iSebmo
 language: fr
 timezone:
-date: 2016-2017
+date: 2016-2018
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
